<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="notification_new_message"
        android:title="@string/pref_title_all_notifications"/>

    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="notification_new_message"
        android:key="notification_new_message_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone"/>

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notification_new_message"
        android:key="notification_new_message_vibrate"
        android:title="@string/pref_title_vibrate"/>

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notification_new_message"
        android:key="notification_power_on"
        android:title="@string/pref_title_power_on_notification"/>
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notification_new_message"
        android:key="notification_power_off"
        android:title="@string/pref_title_power_off_notification"/>
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notification_new_message"
        android:key="notification_power_pressed"
        android:title="@string/pref_title_power_pressed_notification"/>
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notification_new_message"
        android:key="notification_power_held"
        android:title="@string/pref_title_power_held_notification"/>
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notification_new_message"
        android:key="notification_reset_pressed"
        android:title="@string/pref_title_reset_pressed_notification"/>
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notification_new_message"
        android:key="notification_wake_event"
        android:title="@string/pref_title_wake_notification"/>
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notification_new_message"
        android:key="notification_widget_event"
        android:title="@string/pref_title_widget_event"/>
    <SwitchPreference
        android:defaultValue="true"
        android:dependency="notification_new_message"
        android:key="notification_show_display_name"
        android:title="@string/pref_title_show_display_name"/>

</PreferenceScreen>
